syntax = "proto3";

package github.com.mohaijiang.api.compute.v1;

import "google/api/annotations.proto";

option go_package = "github.com/mohaijiang/computeshare-server/api/compute/v1;v1";
option java_multiple_files = true;
option java_package = "api.compute.v1";

service ComputeInstance {
	// 查询规格
	rpc ListComputeSpec(ListComputeSpecRequest) returns (ListComputeSpecReply) {
		option (google.api.http) = {
			get: "/v1/compute/spec",
		};
	}

	// 查询镜像
	rpc ListComputeImage(ListComputeImageRequest) returns (ListComputeImageReply) {
		option (google.api.http) = {
			get: "/v1/compute/image",
		};
	}

	// 查询到期时间
	rpc ListComputeInstanceDuration(ListComputeDurationRequest) returns (ListComputeDurationReply){
		option (google.api.http) = {
			get: "/v1/compute/duration",
		};
	}

	// 创建实例
	rpc Create (CreateInstanceRequest) returns (CreateInstanceReply){
		option (google.api.http) = {
			post: "/v1/instance",
			body: "*",
		};
	};

	//删除实例
	rpc Delete (DeleteInstanceRequest) returns (DeleteInstanceReply){
		option (google.api.http) = {
			delete: "/v1/instance/{id}",
		};
	};

	//获取实例详情
	rpc Get (GetInstanceRequest) returns (GetInstanceReply) {
		option (google.api.http) = {
			get: "/v1/instance/{id}",
		};
	};

	//实例列表
	rpc List (ListInstanceRequest) returns (ListInstanceReply){
		option (google.api.http) = {
			get: "/v1/instance",
		};
	};

	//停止实例
	rpc StopInstance(GetInstanceRequest) returns (StopInstanceReply) {
		option (google.api.http) = {
			put: "/v1/instance/{id}/stop",
			body: "*",
		};
	}

	//启动实例
	rpc StartInstance(GetInstanceRequest) returns (StartInstanceReply) {
		option (google.api.http) = {
			put: "/v1/instance/{id}/start",
			body: "*",
		};
	}
}

message ListComputeSpecRequest {

}

message ListComputeSpecReply {
	int32 code = 1;
	string message = 2;
	repeated ComputeSpec data = 3;
}

message ListComputeImageRequest {

}

message ListComputeImageReply {
	int32 code = 1;
	string message = 2;
	repeated ComputeImage data = 3;
}

message ComputeImage {
	int32 id = 1;
	string name = 2;
	string image = 3;
	string tag = 4;
	int32 port = 5;
}

message ComputeSpec {
	int32 id = 1;
	string core = 2;
	string memory = 3;
}

message ListComputeDurationRequest {

}

message ListComputeDurationReply {
	int32 code = 1;
	string message = 2;
	repeated ComputeDuration data = 3;
}

message ComputeDuration {
	string name = 1;
	int32 duration = 2;
}

message CreateInstanceRequest {
	int32 spec_id = 1;
	int32 image_id = 2;
	int32 duration = 3;
	string name = 4;
}

message PortBinding {
	string listen_port = 1;
	string target_port = 2;
}

message CreateInstanceReply {
	message Data {
		string id = 1;
		string name = 2;
	}
	int32 code = 1;
	string message = 2;
	Data data = 3;
}

message DeleteInstanceRequest {
	string id = 1;
}
message DeleteInstanceReply {
	int32 code = 1;
	string message = 2;
}

message GetInstanceRequest {
	string id = 1;
}
message Instance {
	string id = 1;
	string name = 2;
	int32 status = 3;
	int64 expiration_time = 4;
	string image_name = 5;
	string core = 6;
	string memory = 7;
}
message GetInstanceReply {
	int32 code = 1;
	string message = 2;
	Instance data = 3;
}

message ListInstanceRequest {}
message ListInstanceReply {
	int32 code = 1;
	string message = 2;
	repeated Instance data = 3;
}

message StopInstanceReply {
	int32 code = 1;
	string message = 2;
}

message StartInstanceReply {
	int32 code = 1;
	string message = 2;
}
